fix intro bubble z-index and enable the new Store for everyone (#71)
* fix intro bubble z-index
* enable store for everyone

--- a/sass/_editor.scss
+++ b/sass/_editor.scss
@@ -6174,13 +6174,14 @@ strong {
 
 .ui-bubble {
     position: absolute;
-    z-index: 98;
+    z-index: 100;
 
     > .pulse {
         border-radius: 50%;
         width: 2px;
         height: 2px;
         position: absolute;
+        z-index: 100;
         opacity: 0;
         transition: all 2s ease;
         animation: pulseline 1s ease-out -0.5s infinite;
@@ -6188,6 +6189,7 @@ strong {
 
     > .center {
         position: absolute;
+        z-index: 100;
         left: -7px;
         top: -7px;
         border-radius: 50%;
